<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treinamento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="minha_primeira_imagem">Minha Primeira Imagem</string>
    <string name="meu_botao">Save</string>
    <string name="voce_clicou_em">Você clicou em: %s</string>
    <string name="voc_clicou_na_posi_o_s">Você clicou na posição: %s</string>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="novo">Novo</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="site">Site</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="e_mail">E-mail</string>

</resources>
